--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -23,7 +23,7 @@
 
 	<footer class="navbar-default navbar-fixed-bottom">
 		<div class="text-center center-block">
-			<h4>Follow me here!</h4>
+			<h4>Follow me here! <small><span class="fa fa-copyright"> Copyright 2016 by Abhishek</span></small></h4>
 			<a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button" target="_blank"><i id="social-linkedin" class="fa fa-linkedin-square fa-3x social"></i></a>
 			<a href="https://www.facebook.com/abhishekreddy1206" target="_blank"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
 			<a href="https://twitter.com/abhishekyeruva" target="_blank"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
