--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -2,11 +2,11 @@
 {% block bodycontent %}
 
 <div class="panel panel-default pages">
-	<div class="panel-heading legend">ABOUT ME:</div>
+	<div class="panel-heading legend">ABOUT ME</div>
 	<div class="panel-body fixed-panel">
 		<p>I am a Full Stack Software Engineer in Sacramento, California. I love technology and try to keep myself updated with the latest tools possible. I develop applications mostly using Python programming and some javascript libraries like AngularJs.</p>
 		<p>I have developed various projects related to web scraping, Dashboards for education systems, Reporting tools etc. Currently, I am working on some web aplications related to the food industry. </p>
-		<p>I am a tech enthusiast and love contributing to many open source projects available. I am a regular member of the python community. I also use other tools like Nginx, Apache, WSGI etc for hosting applications.</p>
+		<p>I am a tech enthusiast and love contributing to many open source projects available. I am a regular member of the python community. I also use other tools like Nginx, Apache, WSGI etc for hosting applications. I also have some experience in setting up UNIX servers and also setting up version control systems(GIT) as a private service.</p>
 		<p>I am currently working at <a href="https://us.dealertrack.com/" target="_blank">Dealertrack Technologies</a> where my role is that of a Software Developer. I work on backend development using various technologies like Django, SQLAlchemy, Oracle, Mongo etc.</p>
 		<p>You can follow my contrbutions on <a href="https://github.com/abhishekreddy1206" target="_blank">Github</a> and many other social networking sites.</p>
 		<p>I love working playing Tennis, Music and am a Car Enthusiast too. I have a Mustang <span class="fa fa-car"></span> which i never get bored with <span class="fa fa-smile-o"></span>.</p>
