--- a/blog/templates/contact.html
+++ b/blog/templates/contact.html
@@ -2,9 +2,24 @@
 {% block bodycontent %}
 
 <div class="panel panel-default pages">
-	<div class="panel-heading legend">CONTACT ME:</div>
-	<div class="panel-body fixed-panel">
+	<div class="panel-heading legend">CONTACT ME</div>
+	<div class="panel-body fixed-panel text-center">
+		<h3>Follow me here!</h3>
 		
+		<a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button" target="_blank"><i id="social-linkedin" class="fa fa-linkedin-square fa-3x social"></i></a>
+		<a href="https://www.facebook.com/abhishekreddy1206" target="_blank"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+		<a href="https://twitter.com/abhishekyeruva" target="_blank"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+		<a href="https://plus.google.com/+AbhishekReddyYeruva/posts" target="_blank"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+		<a href="https://github.com/abhishekreddy1206" target="_blank"><i id="social-git" class="fa fa-github-square fa-3x social"></i></a>
+		<a href="https://www.pinterest.com/abhishekyeruva/" target="_blank"><i id="social-pin" class="fa fa-pinterest-square fa-3x social"></i></a>
+		<a href="https://www.instagram.com/abhishekreddy1206/" target="_blank"><i id="social-instagram" class="fa fa-instagram fa-3x social"></i></a>
+		<a href="mailto:abhishekreddy1206@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+		<br/><br/>
+		
+		<div class="panel panel-primary">
+		<h3><span class="fa fa-send"></span> abhishekreddy1206@gmail.com</h3>
+		<h3><span class="fa fa-phone"></span> +1 40eight 66three 777five <small>(to prevent crawlers)</small></h3>
+		</div>
 	</div>
 </div>
 
