--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -43,5 +43,10 @@
 	<script src="/static/blog/js/angular/angular-ui-bootstrap.js"></script>
 	<script src="/static/blog/js/angular/angular-resource.min.js"></script>
 	<script src="/static/blog/js/angular/angular-min-router.js"></script>
+	<script>
+		$('.carousel').carousel({
+			interval: 3000
+		})
+	</script>
 
 </html>
