--- a/blog/templates/projects.html
+++ b/blog/templates/projects.html
@@ -2,7 +2,7 @@
 {% block bodycontent %}
 
 <div class="panel panel-default pages">
-	<div class="panel-heading legend">PROJECTS:</div>
+	<div class="panel-heading legend">PROJECTS</div>
 	<div class="panel-body fixed-panel">
 		
 	</div>
