--- a/blog/templates/experience.html
+++ b/blog/templates/experience.html
@@ -3,18 +3,22 @@
 
 <div class="panel panel-default pages">
 	<div class="panel-heading legend">EXPERIENCE</div>
-	<div class="panel-body fixed-panel" style="margin-top:-50px;">
+	<div class="panel-body fixed-panel">
 		<div class="page-header">
 			<h3><a href="https://us.dealertrack.com/" target="_blank">Dealertrack Technologies</a> <small>Software Developer (July 2015 - Present)</small></h3>
 		</div>
 		<p><span class="fa fa-asterisk"></span> Software Engineer working on backend tools in the auto industry for automobile dealers, lenders etc using Django, Python, Git, Oracle, MongoDB, Sql-Alchemy. Maintenance of api's etc.</p>
 		<p><span class="fa fa-asterisk"></span> Agile Methodologies</p>
 
+		<hr>
+
 		<div class="page-header">
 			<h3><a href="http://www.machbtech.com/" target="_blank">MachB Technologies</a> <small>Software Developer (Jan 2014 - June 2015)</small></h3>
 		</div>
 		<p><span class="fa fa-asterisk"></span> Worked as Software Developer to create from scratch, tools for Educational institutions using all the latest technologies like Django, Python, Bootstrap, Angularjs etc.</p>
 		<p><span class="fa fa-asterisk"></span> Worked on various Web Scraping Projects using Scrapy Framework.</p>
+
+		<hr>
 
 		<div class="page-header">
 			<h3><a href="http://grad.unm.edu/home/" target="_blank">Univ. of New Mexico</a> <small>Web Developer (Aug 2012 - Dec 2013)</small></h3>
@@ -25,12 +29,16 @@
 		<p class="text-center"><span class="fa fa-angle-right"></span> <a href="http://wrp.unm.edu//" target="_blank">UNM Water Resources Program</a></p>
 		<p class="text-center"><span class="fa fa-angle-right"></span> <a href="http://nsme.unm.edu/" target="_blank">UNM Nanoscience and Microsystems Engineering</a></p>
 
+		<hr>
+
 		<div class="page-header">
 			<h3><a href="http://hospitals.unm.edu/neurology/" target="_blank">Univ. of New Mexico</a> <small>Research Assistant (Aug 2011 - July 2012)</small></h3>
 		</div>
 		<p><span class="fa fa-asterisk"></span> Research on brain MRI scans and fMRI analysis of data collected from the scans.</p>
 		<p><span class="fa fa-asterisk"></span> Performed ICA Analysis on brain scans to monitor activity of the brain under various cases</p>
-		<p><span class="fa fa-asterisk"> <a href="http://www.brainmapping.org/NITP/images/Summer2012Slides/Real-time-fMRI%20NITP%20071712%20(shrunk).pdf">Real Time Functional MRI</a></p>
+		<p><span class="fa fa-asterisk"> <a href="http://www.brainmapping.org/NITP/images/Summer2012Slides/Real-time-fMRI%20NITP%20071712%20(shrunk).pdf" target="_blank">Real Time Functional MRI</a></p>
+
+		<hr>
 	</div>
 </div>
 
