--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -11,6 +11,40 @@
 		<p>You can follow my contrbutions on <a href="https://github.com/abhishekreddy1206" target="_blank">Github</a> and many other social networking sites.</p>
 		<p>I love working playing Tennis, Music and am a Car Enthusiast too. I have a Mustang <span class="fa fa-car"></span> which i never get bored with <span class="fa fa-smile-o"></span>.</p>
 	</div>
+	<div class="panel-footer fixed-panel-skill">
+		<h4 class="text-center">MY SKILLS</h4>
+		<div class="row">
+			<div class="col-md-3">
+				<h4><u>Technologies:</u></h4>
+				<p>Python</p>
+				<p>JAVA, J2EE</p>
+				<p>C, C++, Ruby</p>
+				<p>Shell Scripting</p>
+				<p>Javascript</p>
+			</div>
+			<div class="col-md-3">
+				<h4><u>Frameworks:</u></h4>
+				<p>Django</p>
+				<p>AngularJS</p>
+				<p>Hadoop, MapReduce Algorithms</p>
+				<p>Ruby on Rails</p>
+			</div>
+			<div class="col-md-3">
+				<h4><u>Other Tools:</u></h4>
+				<p>Amazon AWS</p>
+				<p>Apache, Nginx</p>
+				<p>Bootstrap CSS</p>
+				<p>GIT Version Control</p>
+			</div>
+			<div class="col-md-3">
+				<h4><u>IDE's abd DB's:</u></h4>
+				<p>Pycharm</p>
+				<p>MySQL, PostGreSql, Oracle, MongoDB</p>
+				<p>WAMP, LAMP, XAMPP</p>
+				<p>Dreamweaver</p>
+			</div>
+		</div>
+	</div>
 </div>
 
 {% endblock %}
