--- a/blog/templates/projects.html
+++ b/blog/templates/projects.html
@@ -4,6 +4,88 @@
 <div class="panel panel-default pages">
 	<div class="panel-heading legend">PROJECTS</div>
 	<div class="panel-body fixed-panel">
+
+		<div class="page-header">
+			<h3><a href="#">Django Education dashboard</a><small>(No link)</small></h3>
+		</div>
+		<p>Developed a student dashboard system usind Django, Django-rest-framework, Angularjs, Bootstrap and Postgresql. The student has functionalities like registering for a course in a semester, planning courses that are registered over a period of semesters, view progress in a course and program, etc.</p>
+		<p><u>Technologies Used</u>: Python, Django, AngularJs, Bootstrap, PostGreSql</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="#">Hospital Big Data Project</a><small>(No link)</small></h3>
+		</div>
+		<p>Developed a simple Hadoop project to analyze tons of data obtained from a hospital medicare system. The mapper and reducer functions were written using python for the analysis. Data obtained from <a href="http://healthjournalism.org/resources-data-details.php?id=19#.Unv3gpTwK9O" target="_blank">here</a> for the project.</p>
+		<p>This was a team project and i partnered with <a href="https://www.linkedin.com/in/amandajeanminnich?authType=name&authToken=LBx3&trk=prof-proj-cc-name" target="_blank">Amanda</a>.</p>
+		<p><u>Technologies Used</u>: Hadoop, Python</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="https://github.com/abhishekreddy1206/clickerproject" target="_blank">Clicker Project</a></h3>
+		</div>
+		<p>Developed a clicker project for interaction between professors and students where the students can take up quiz tests and also other tests. Many graphical representation of the answers are also displayed.</p>
+		<p>This was a team project and i partnered with <a href="https://www.linkedin.com/in/gamulja?authType=name&authToken=2MpD&trk=prof-proj-cc-name" target="_blank">Andrew</a>.</p>
+		<p><u>Technologies Used</u>: Ruby on Rails, Javascript, CSS, GIT</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="https://github.com/abhishekreddy1206/snake-project" target="_blank">Snake Game Application</a></h3>
+		</div>
+		<p>A simple snake game application</p>
+		<p><u>Technologies Used</u>: Javascript, HTML</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="https://github.com/abhishekreddy1206/spoj" target="_blank">SPOJ problem solving</a></h3>
+		</div>
+		<p><a href="http://www.spoj.com/">SPOJ</a> has many puzzles and problem solving related questions which can be solved using any programming language. I have tried solving a few of them and will continue to try and solve more of them.</p>
+		<p><u>Technologies Used</u>: python</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="https://github.com/abhishekreddy1206/myblog" target="_blank">My blog</a></h3>
+		</div>
+		<p>The blog you are looking at right now! :D</p>
+		<p><u>Technologies Used</u>: Django, Python, PostGreSql, Bootstrap</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="https://github.com/abhishekreddy1206/login-database-project" target="_blank">Time Record Management Systems</a></h3>
+		</div>
+		<p>Developed a database system which records the login and logout times of a user within a university in different computer labs. This application is also helpful for tracking people.</p>
+		<p><u>Technologies Used</u>: MySql, Python, PhpMyAdmin, WAMP</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="#">Web Scraping</a></h3>
+		</div>
+		<p>Scrapy is a tool used to scrape the web and pipeline data into any type of database. Hence i made a scraper tool to scrape data from all the job portals that were looking interesting and useful!</p>
+		<p><u>Technologies Used</u>: Python, Scrapy, SqlAlchemy, PostGreSql</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="#">TCP Routing System</a><small>(No link)</small></h3>
+		</div>
+		<p>A project in the field of Computer Networks, in the area of TCP routing where we showed that in a video streaming process across different systems, the varying bandwidths across the subnets has an effect on the streaming process and thus there is loss of data/packets.</p>
+		<p><u>Technologies Used</u>: VLC Media Player, Wireshark, Oracle Virtual box for VM’s</p>
+
+		<hr>
+
+		<div class="page-header">
+			<h3><a href="#">TOR Network System</a><small>(No link)</small></h3>
+		</div>
+		<p>A project in the field of Computer Networks, in the area of TOR networks where we show that the varying bandwidths on an onion router will also vary with a vary in the number of packet loss in a linear relation.</p>
+		<p><u>Technologies Used</u>: Wireshark, Oracle Virtual box for VM’s</p>
+
+		<hr>
 		
 	</div>
 </div>
