--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -27,6 +27,11 @@
 							About Me </a>
 						</li>
 						<li>
+							<a href="/education">
+							<i class="fa fa-book"></i>
+							Education </a>
+						</li>
+						<li>
 							<a href="/projects">
 							<i class="fa fa-code"></i>
 							Projects </a>
